# SpeaQL_code_submission

./: .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  README.md  logging.yaml  runme.sh  setup.cfg
data/queries/: ground_truth.jsonl  sql_queries.py
dbkgexp/: graph_interface_utils.py  llm_handler.py  rdb_explorer.py  rel_node.py
scripts/experiment/: build_db_from_source_files.py  evaluation.py  run_experiment.py  run_sql_queries.py
streamlit/: README.md  config.yaml  databaseTest.py  db_CONFIG_README.md  db_config_example_custom_sqlite.yaml  initial_search_CONFIG_README.md  initial_search_config_example_multi_table.yaml  initial_search_config_example_single_table.yaml  sca_gui_db_utils.py  sca_streamlit_app.py  session_logger.py  streamlit_llm_handler.py
test/: run_test.py
