[metadata]
name = dbkgexp
description = Database Knowledge Graph Exploration
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: dbkgexp.__version__

[options]
packages = find:

install_requires =
    aiofiles>=24.1.0
    numpy>=2.2.5
    openai>=1.76.2
    pydantic>=2.11.4
    tqdm>=4.67.1
    tenacity>=9.1.2
    spherecluster>=0.1.7
    PyYAML
    python-dotenv
    dspy
    pymysql
    mysql-connector-python
    streamlit
    networkx
    pyvis
    matplotlib
    setuptools
    streamlit_scrollable_textbox
    bs4
    tiktoken


[options.packages.find]
exclude =
    # exclude local virtual enviornment
    *env

[options.extras_require]
test =
    pytest
    pytest-asyncio

dev =
    dbkgexp[test]
    fastapi[all]>=0.115.11
    uvicorn>=0.34.0
    black>=25.1.0
    matplotlib >= 3.10.1
    seaborn >= 0.13.2
